# QuASK

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/source/notebooks/: getting_started.ipynb  quantum_0_intro.ipynb  quantum_1_expressibility.ipynb  quantum_2_projected.ipynb  quask_0_backends.ipynb  quask_1_evaluators.ipynb
src/quask/: __init__.py  __version__.py
src/quask/core/: __init__.py  ansatz.py  kernel.py  kernel_factory.py  kernel_type.py  operation.py
src/quask/core_implementation/: __init__.py  braket_kernel.py  pennylane_kernel.py  qibo_kernel.py  qiskit_kernel.py
src/quask/evaluator/: __init__.py  centered_kernel_alignment_evaluator.py  covering_number_evaluator.py  ess_model_complexity_evaluator.py  geometric_difference_evaluator.py  haar_evaluator.py  kernel_alignment_evaluator.py  kernel_evaluator.py  lie_rank_evaluator.py  ridge_generalization_evaluator.py  spectral_bias_evaluator.py
src/quask/optimizer/: base_kernel_optimizer.py  bayesian_optimizer.py  metaheuristic_optimizer.py  reinforcement_learning_optimizer.py  wide_kernel_environment.py
tests/: kernel_test.py  test_example.py  test_pennylane_kernel.py
